--- a/templates/movie.html
+++ b/templates/movie.html
@@ -99,10 +99,15 @@
                         <span class="fa fa-star"></span>
                         {% endfor %}
                     </p>
-                    <div class="mt-4">
-                        <a href="/movies/edit/{{movie['id']}}"><i class="fa fa-edit fa-btn"></i></a>
-                        <a href="/movies/delete/{{movie['id']}}"><i class="fa fa-trash fa-btn-red"></i></a>
-
+                    <div class="mt-4 card-btn">
+                        <div><a href="/movies/edit/{{movie['id']}}"><i class="fa fa-edit fa-btn"></i></a></div>
+                        <div><button onclick="display_del_option({{movie['id']}})" type="button" class="btn"><i
+                                    class="fa fa-trash fa-btn-red"></i></button></div>
+                        <div style="display: none;" id="div-confirm-del-{{movie['id']}}">Delete? <a
+                                class="btn btn-outline-danger" href="/movies/delete/{{movie['id']}}">Yes</a>
+                            <button onclick="close_del_option({{movie['id']}})" type="button"
+                                class="btn btn-outline-secondary" href="#">No</button>
+                        </div>
                     </div>
                 </div>
             </div>
