--- a/templates/partials/links.html
+++ b/templates/partials/links.html
@@ -15,10 +15,14 @@
     .fa-btn-red {
         color: #dc3545;
         font-size: 24px;
-        margin-left: 10px;
     }
 
-
+    .card-btn {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: flex-start;
+    }
 
     #movies-card>.card {
         margin-bottom: 40px;
